# DiscOS

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  MIGRATION_REMOVE_PYTHON.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  TESTING_EVIDENCE.md  UNPACK_AND_SETUP.md  discos.yaml  pyproject.toml  rust-toolchain.toml
.github/: ISSUE_DRAFTS.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml
artifacts/forc10/: FULL_ARTIFACT_MANIFEST.json  Makefile  README.md
artifacts/sim/: exp7b_results.json  exp7b_results.md
artifacts/system-test/: operation_swarm_results.json
crates/discos-builder/: Cargo.toml
crates/discos-builder/examples/: manifest_hashes.rs  minimal_module.rs
crates/discos-builder/src/: lib.rs
crates/discos-builder/tests/: evidenceos_vault_system.rs
crates/discos-cli/: Cargo.toml  build.rs
crates/discos-cli/src/: artifacts.rs  capsule.rs  lib.rs  main.rs
crates/discos-cli/tests/: capsule_decode.rs  exfiltration_demo.rs  paper_artifacts_smoke.rs  paper_suite_minimal.rs  readme_links.rs
crates/discos-client/: Cargo.toml  build.rs
crates/discos-client/benches/: agent_overhead.rs
crates/discos-client/src/: lib.rs
crates/discos-client/tests/: auth_protocol_vectors.rs  connect_timeout_blackhole.rs  e2e_against_daemon_v2.rs  golden_impl_status_gate.rs  operation_swarm_system.rs  oracle_id_integration.rs  probe_simulation_integration.rs  proto_compat.rs  protocol_surface.rs  scenarios_system.rs  system_e2e.rs  tls_auth_integration.rs  verify_capsule.rs  wire_contract.rs
crates/discos-core/: Cargo.toml
crates/discos-core/src/: boundary.rs  evalue.rs  labels.rs  lib.rs  popper.rs  structured_claims.rs  topicid.rs
crates/discos-core/src/experiments/: exp0.rs  exp1.rs  exp11.rs  exp12.rs  exp2.rs  exp3.rs  exp7b.rs  mod.rs
crates/discos-core/test_vectors/: exp12_golden.json  topicid_vectors.json
crates/discos-core/test_vectors/structured_claims/invalid/: float_value_q.json
crates/discos-core/test_vectors/structured_claims/valid/: escalate_min.hex  heavy_min.json  pass_max_boundaries.hex  reject_min.hex  reject_min.json
crates/discos-core/tests/: exp11_properties.rs  exp12_tests.rs  exp2_non_finite.rs  exp3_tests.rs  exp7b_tests.rs  experiments_integration.rs  property_spaces.rs  schema_alias_convergence.rs  structured_claims_end_to_end.rs  structured_claims_prop.rs  structured_claims_vectors.rs  topicid_vectors.rs
crates/evidenceos-auth-protocol/: Cargo.toml
crates/evidenceos-core/: Cargo.toml
crates/evidenceos-core/src/: crypto_transcripts.rs  etl.rs  forc.rs  guest_abi.rs  ledger.rs  lib.rs  manifest.rs  safety_policy.rs  topicid.rs  wasm_aspec.rs
crates/evidenceos-protocol/: Cargo.toml  build.rs
crates/evidenceos-protocol/proto/: evidenceos.proto
crates/evidenceos-protocol/src/: lib.rs
crates/evidenceos-protocol/tests/: proto_descriptor_snapshot.rs
crates/evidenceos-redteam/: Cargo.toml
crates/evidenceos-redteam/src/: lib.rs  main.rs
crates/evidenceos-redteam/tests/: redteam_integration.rs
crates/evidenceos-verifier/: CHANGELOG.md  Cargo.toml
crates/evidenceos-verifier/src/: lib.rs
crates/evidenceos-verifier/tests/: verifier_primitives.rs
docs/: ALIGNMENT_SPILLOVER_POSITIONING.md  DUAL_USE_AND_MISUSE.md  EPISTEMIC_TRIAL_HARNESS.md  IMPLEMENTATION_STATUS.md  ISSUE_BACKLOG.md  NOVELTY.md  OPERATION_SWARM_RESULTS.md  PAPER_VS_CODE.md  POSITIONING.md  PROTOCOL_VERSIONING.md  PROVENANCE.md  README.md  REPRODUCE_PAPER.md  START_HERE.md  TEST_COVERAGE_MATRIX.md  TEST_COVERAGE_PARAMETERS.md  TEST_EVIDENCE.md  THREAT_MODEL_BLACKBOX.md  reader_map.md  resilience-issue-drafts.md  test_coverage_matrix.md  threat_model_worked_example.md  topicid.md  uvp_blackbox_interface.md
docs/rfc/: RFC-1000-overview.md  RFC-1001-hir.md  RFC-1002-phys-hir-pds.md  RFC-1003-registry-lineage.md  RFC-1004-scheduler.md  RFC-1005-ledger-policies.md  RFC-1006-execution-hardening.md  RFC-1007-uvp.md  RFC-1008-pcd.md
docs/scenarios/: benign-mixed-traffic.json  cross-tool-differential-probing.json  downgrade-mismatch-refused.json  identity-rotation-stable-topic.json  rapid-repeated-tool-calls.json  repeated-probing-budget-freeze.json  stale-proof-fails-closed.json  sybil-scaling-topic-flat-success.json
examples/builder/: README.md
examples/exfiltration_demo/: README.md  attack_bitflip.py  baseline_oracle.py  evidenceos_variant.md
examples/external_oracle_wasm/: README.md
examples/python_ipc/: README.md  client.py  requirements.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_client_grpc_response_state_machine.rs  fuzz_structured_claim_parse_canonicalize.rs  fuzz_structured_claims_canonical.rs  fuzz_structured_claims_json.rs
integrations/langchain-wrapper/: README.md  pyproject.toml  smoke_test.sh
integrations/langchain-wrapper/examples/: e2e_preflight_adapter.py
integrations/langchain-wrapper/langchain_evidenceos/: __init__.py  adapter.py  guard.py
integrations/langchain-wrapper/tests/: test_contract.py  test_e2e_daemon_contract.py  test_guard.py
integrations/openclaw-plugin/: README.md  package-lock.json  package.json  tsconfig.json
paper_artifacts/: reproduce_paper.py  requirements.txt
proto/: evidenceos.proto
schemas/: discos.alphahir.schema.json
scripts/: check_case_insensitive_collisions.sh  check_coverage_threshold_drift.sh  check_evidenceos_proto_sync.sh  check_implementation_honesty.sh  check_proto_drift.sh  check_vendor_drift.sh  fetch_forc10_artifacts.sh  operation_swarm_demo.sh  probe_simulation.sh  system_test.sh  test_evidence.sh  update_vendored_evidenceos.sh  validate_evidenceos_pin.sh  vendor_evidenceos.sh
src/discos/: __init__.py  __main__.py  cli.py  (+1 more)
test_vectors/: topicid_v1.json  topicid_vectors.json
tests/: agent_resilience.rs  experiments_integration.rs  operation_swarm_system.rs  scenarios_system.rs  test_lint_alphahir.py  test_patch_apply.py  test_phys_pds.py  test_watgen_and_canary.py
(+50 files in other folders)
