# Copyright (c) 2026 Joseph Verdicchio and DiscOS  Contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
  "crates/discos-core",
  "crates/discos-cli",
  "crates/discos-client",
  "crates/discos-builder",
  "crates/evidenceos-core",
]

[workspace.package]
authors = ["Joseph Verdicchio", "DiscOS Contributors"]
version = "0.1.0"
description = "DiscOS untrusted userland client and builder for EvidenceOS"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jverdicc/DiscOS"

[workspace.dependencies]
evidenceos-protocol = { git = "https://github.com/EvidenceOS/evidenceos.git", rev = "4c1d7f2b0adf337df75fc85d4b7d84df4e99d0af", package = "evidenceos-protocol" }
