# Copyright (c) 2026 Joseph Verdicchio and DiscOS  Contributors
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
  "crates/discos-core",
  "crates/discos-cli",
  "crates/discos-client",
  "crates/discos-builder",
  "crates/evidenceos-auth-protocol",
  "crates/evidenceos-verifier",
  "crates/evidenceos-core",
  "crates/evidenceos-redteam",
]

[workspace.package]
authors = ["Joseph Verdicchio", "DiscOS Contributors"]
version = "0.1.0"
description = "DiscOS untrusted userland client and builder for EvidenceOS"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jverdicc/DiscOS"

[workspace.dependencies]
evidenceos-protocol = { git = "https://github.com/jverdicc/EvidenceOS.git", rev = "92daeb58a28323ed6ee75a89535cf86b4902f3fe" }
evidenceos-verifier = { path = "crates/evidenceos-verifier", version = "0.1.0" }
evidenceos-auth-protocol = { path = "crates/evidenceos-auth-protocol", version = "0.1.0" }

