[package]
name = "discos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
discos-core = { path = "../crates/discos-core" }
discos-client = { path = "../crates/discos-client" }
prost = "0.13"

[[bin]]
name = "fuzz_structured_claims_json"
path = "fuzz_targets/fuzz_structured_claims_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_claims_canonical"
path = "fuzz_targets/fuzz_structured_claims_canonical.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_claim_parse_canonicalize"
path = "fuzz_targets/fuzz_structured_claim_parse_canonicalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_client_grpc_response_state_machine"
path = "fuzz_targets/fuzz_client_grpc_response_state_machine.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
