[package]
name = "discos-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-encoder = "0.220"
sha2 = "0.10"

[dev-dependencies]
wat = "1"
wasmparser = "0.220"
proptest = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
discos-client = { path = "../discos-client" }
