[package]
name = "discos-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-encoder = "0.220"
sha2 = "0.10"
evidenceos-core = { path = "../evidenceos-core" }

[dev-dependencies]
wat = "1"
wasmparser = "0.220"
proptest = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
discos-client = { path = "../discos-client" }
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
ed25519-dalek = "2"
