[package]
name = "discos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sim = []

[dependencies]
discos-core = { path = "../discos-core" }
discos-client = { path = "../discos-client" }
discos-builder = { path = "../discos-builder" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }

# async + gRPC client

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
