[package]
name = "discos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sim = ["discos-core/sim"]

[dependencies]
discos-core = { path = "../discos-core" }
discos-client = { path = "../discos-client" }
discos-builder = { path = "../discos-builder" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = "0.1"


[dev-dependencies]
tempfile = "3"
proptest = "1"
