[package]
name = "discos-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
