[package]
name = "discos-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
sha2 = "0.10"
ed25519-dalek = "2"
evidenceos-protocol = { path = "../evidenceos-protocol" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
