[package]
name = "discos-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
sha2 = "0.10"
ed25519-dalek = "2"
evidenceos-protocol.workspace = true

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
http = "1"
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost-types = "0.13"
