# Copyright (c) 2026 Joseph Verdicchio and DiscOS  Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "discos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
