# Copyright (c) 2026 Joseph Verdicchio and DiscOS  Contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "discos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sim = ["dep:rand", "dep:rand_chacha", "dep:async-trait"]

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evidenceos-core = { path = "../evidenceos-core" }

rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
proptest = "1"
serde_json = "1"
hex = "0.4"
