[package]
name = "evidenceos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
ed25519-dalek = "2"
evidenceos-protocol.workspace = true
serde_json = "1"
wasmparser = "0.220"
