[package]
name = "evidenceos-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
