[package]
name = "evidenceos-redteam"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Covert-channel red-team harness for EvidenceOS/DiscOS CI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
discos-client = { path = "../discos-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.12"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
