[package]
name = "evidenceos-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared verification primitives for EvidenceOS transcripts and ETL proofs"

[dependencies]
sha2 = "0.10"
thiserror = "1"
ed25519-dalek = "2"
evidenceos-protocol.workspace = true

