[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-evidenceos"
version = "0.1.0"
description = "LangChain callback handler that gates tool calls via EvidenceOS preflight."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DiscOS Contributors" }]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_evidenceos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
